Major Internal changes  * Log4J Version 1 was replaced with Log4J Version 2  * Internal "stuff"... Rewrote a bunch of constructs to be able to move to Java 11, 17 or 21. (Java 11 is needed to upgrade to H2 latest version, which will be done soon)