@@ -25,6 +25,7 @@ import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.event.MouseEvent;
 import java.awt.event.MouseMotionListener;
+import java.lang.invoke.MethodHandles;
 
 import javax.swing.JMenuItem;
 import javax.swing.JPopupMenu;
@@ -36,7 +37,8 @@ import javax.swing.event.ListSelectionListener;
 import javax.swing.table.JTableHeader;
 import javax.swing.table.TableModel;
 
-import org.apache.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.jdesktop.swingx.JXTable;
 import org.jdesktop.swingx.JXTableHeader;
 
@@ -46,7 +48,7 @@ import com.dbxtune.alarm.ui.config.AlarmTableModel.AlarmEntry;
 public class AlarmTable extends JXTable
 {
 	private static final long serialVersionUID = 0L;
-	private static Logger _logger = Logger.getLogger(AlarmTable.class);
+	private static final Logger _logger = LogManager.getLogger(MethodHandles.lookup().lookupClass());
 
 	//	protected int           _lastTableHeaderPointX = -1;
 	protected int           _lastTableHeaderColumn = -1;
@@ -283,7 +285,7 @@ public class AlarmTable extends JXTable
 					for (int r=0; r<tm.getRowCount(); r++)
 					{
 						if (tm.isCellEditable(r, col))
-							tm.setValueAt(new Boolean(true), r, col);
+							tm.setValueAt(Boolean.valueOf(true), r, col);
 					}
 				}
 			}
@@ -301,7 +303,7 @@ public class AlarmTable extends JXTable
 					for (int r=0; r<tm.getRowCount(); r++)
 					{
 						if (tm.isCellEditable(r, col))
-							tm.setValueAt(new Boolean(false), r, col);
+							tm.setValueAt(Boolean.valueOf(false), r, col);
 					}
 				}
 			}
