@@ -21,6 +21,7 @@
 package com.dbxtune.cm.ase;
 
 import java.awt.event.MouseEvent;
+import java.lang.invoke.MethodHandles;
 import java.sql.ResultSet;
 import java.sql.ResultSetMetaData;
 import java.sql.SQLException;
@@ -34,16 +35,17 @@ import java.util.Map.Entry;
 import javax.naming.NameNotFoundException;
 
 import org.apache.commons.lang3.ArrayUtils;
-import org.apache.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 import com.dbxtune.ICounterController;
 import com.dbxtune.IGuiController;
 import com.dbxtune.central.pcs.CentralPersistReader;
 import com.dbxtune.cm.CounterSample;
 import com.dbxtune.cm.CounterSetTemplates;
+import com.dbxtune.cm.CounterSetTemplates.Type;
 import com.dbxtune.cm.CountersModel;
 import com.dbxtune.cm.NoValidRowsInSample;
-import com.dbxtune.cm.CounterSetTemplates.Type;
 import com.dbxtune.config.dict.AseErrorMessageDictionary;
 import com.dbxtune.config.dict.MonTablesDictionary;
 import com.dbxtune.config.dict.MonTablesDictionaryManager;
@@ -67,7 +69,7 @@ import com.google.gson.Gson;
 public class CmSqlStatementPerDb
 extends CountersModel
 {
-	private static Logger        _logger          = Logger.getLogger(CmSqlStatementPerDb.class);
+	private static final Logger _logger = LogManager.getLogger(MethodHandles.lookup().lookupClass());
 	private static final long    serialVersionUID = 1L;
 
 	public static final String   CM_NAME          = CmSqlStatementPerDb.class.getSimpleName();
@@ -668,10 +670,10 @@ extends CountersModel
 	public Object calculateAggregateRow_nonAggregatedColumnDataProvider(CounterSample newSample, String colName, int c, int jdbcType, Object addValue)
 	{
 		if ("dbid".equalsIgnoreCase(colName))
-			return new Integer( 0 );
+			return Integer.valueOf( 0 );
 
 //		if ("dbid".equalsIgnoreCase(colName))
-//			return new Integer( Short.MAX_VALUE );  // If we wanted sorted "at the end"
+//			return Integer.valueOf( Short.MAX_VALUE );  // If we wanted sorted "at the end"
 		
 		return null;
 	}
