@@ -21,6 +21,7 @@
 package com.dbxtune.cm.ase;
 
 import java.awt.Component;
+import java.lang.invoke.MethodHandles;
 import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -32,7 +33,8 @@ import javax.swing.JCheckBoxMenuItem;
 import javax.swing.JPanel;
 
 import org.apache.commons.text.StringEscapeUtils;
-import org.apache.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 import com.dbxtune.CounterController;
 import com.dbxtune.DbxTune;
@@ -43,16 +45,16 @@ import com.dbxtune.alarm.events.AlarmEvent;
 import com.dbxtune.alarm.events.AlarmEventBlockingLockAlarm;
 import com.dbxtune.alarm.events.AlarmEventFullTranLog;
 import com.dbxtune.alarm.events.AlarmEventHighCpuUtilization;
-import com.dbxtune.alarm.events.AlarmEventLongRunningTransaction;
 import com.dbxtune.alarm.events.AlarmEventHighCpuUtilization.CpuType;
+import com.dbxtune.alarm.events.AlarmEventLongRunningTransaction;
 import com.dbxtune.central.pcs.CentralPersistReader;
 import com.dbxtune.cm.CmSettingsHelper;
+import com.dbxtune.cm.CmSettingsHelper.RegExpInputValidator;
 import com.dbxtune.cm.CmSummaryAbstract;
 import com.dbxtune.cm.CounterSample;
 import com.dbxtune.cm.CounterSetTemplates;
-import com.dbxtune.cm.CountersModel;
-import com.dbxtune.cm.CmSettingsHelper.RegExpInputValidator;
 import com.dbxtune.cm.CounterSetTemplates.Type;
+import com.dbxtune.cm.CountersModel;
 import com.dbxtune.cm.ase.gui.CmSummaryPanel;
 import com.dbxtune.graph.TrendGraphDataPoint;
 import com.dbxtune.graph.TrendGraphDataPoint.LabelType;
@@ -76,7 +78,7 @@ public class CmSummary
 //extends CountersModel
 extends CmSummaryAbstract
 {
-	private static Logger        _logger          = Logger.getLogger(CmSummary.class);
+	private static final Logger _logger = LogManager.getLogger(MethodHandles.lookup().lookupClass());
 	private static final long    serialVersionUID = 1L;
 
 	public static final String   CM_NAME          = CmSummary.class.getSimpleName();
@@ -811,7 +813,7 @@ extends CmSummaryAbstract
 				if (((Number)obj).intValue() < 0)
 				{
 					//System.out.println("colId="+colId+", name='"+columnName+"', setting to Integer(0)");
-					counters.setValueAt(new Integer(0), rowId, colId);
+					counters.setValueAt(Integer.valueOf(0), rowId, colId);
 				}
 			}
 		}
