@@ -20,6 +20,7 @@
  ******************************************************************************/
 package com.dbxtune.cm.postgres;
 
+import java.lang.invoke.MethodHandles;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Statement;
@@ -31,7 +32,8 @@ import java.util.Map;
 import javax.naming.NameNotFoundException;
 
 import org.apache.commons.lang3.ArrayUtils;
-import org.apache.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 import com.dbxtune.ICounterController;
 import com.dbxtune.IGuiController;
@@ -39,8 +41,8 @@ import com.dbxtune.Version;
 import com.dbxtune.central.pcs.CentralPersistReader;
 import com.dbxtune.cm.CounterSample;
 import com.dbxtune.cm.CounterSetTemplates;
-import com.dbxtune.cm.CountersModel;
 import com.dbxtune.cm.CounterSetTemplates.Type;
+import com.dbxtune.cm.CountersModel;
 import com.dbxtune.cm.postgres.gui.CmPgStatementsSumDbPanel;
 import com.dbxtune.config.dict.MonTablesDictionary;
 import com.dbxtune.config.dict.MonTablesDictionaryManager;
@@ -60,7 +62,7 @@ import com.dbxtune.utils.Ver;
 public class CmPgStatementsSumDb
 extends CountersModel
 {
-	private static Logger        _logger          = Logger.getLogger(CmPgStatementsSumDb.class);
+	private static final Logger _logger = LogManager.getLogger(MethodHandles.lookup().lookupClass());
 	private static final long    serialVersionUID = 1L;
 
 	public static final String   CM_NAME          = CmPgStatementsSumDb.class.getSimpleName();
@@ -822,7 +824,7 @@ extends CountersModel
 	public Object calculateAggregateRow_nonAggregatedColumnDataProvider(CounterSample newSample, String colName, int c, int jdbcType, Object addValue)
 	{
 		if ("dbid".equalsIgnoreCase(colName))
-			return new Long(-1);
+			return Long.valueOf(-1);
 		
 		return null;
 	}
