@@ -20,6 +20,7 @@
  ******************************************************************************/
 package com.dbxtune.cm.sqlserver;
 
+import java.lang.invoke.MethodHandles;
 import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -29,7 +30,8 @@ import java.util.Map;
 
 import javax.naming.NameNotFoundException;
 
-import org.apache.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 import com.dbxtune.ICounterController;
 import com.dbxtune.IGuiController;
@@ -40,8 +42,8 @@ import com.dbxtune.central.pcs.CentralPersistReader;
 import com.dbxtune.cm.CmSettingsHelper;
 import com.dbxtune.cm.CounterSample;
 import com.dbxtune.cm.CounterSetTemplates;
-import com.dbxtune.cm.CountersModel;
 import com.dbxtune.cm.CounterSetTemplates.Type;
+import com.dbxtune.cm.CountersModel;
 import com.dbxtune.config.dict.MonTablesDictionary;
 import com.dbxtune.config.dict.MonTablesDictionaryManager;
 import com.dbxtune.graph.TrendGraphDataPoint;
@@ -59,7 +61,7 @@ import com.dbxtune.utils.MathUtils;
 public class CmMemoryGrantsSum
 extends CountersModel
 {
-	private static Logger        _logger          = Logger.getLogger(CmMemoryGrantsSum.class);
+	private static final Logger _logger = LogManager.getLogger(MethodHandles.lookup().lookupClass());
 	private static final long    serialVersionUID = 1L;
 
 	public static final String   CM_NAME          = CmMemoryGrantsSum.class.getSimpleName();
@@ -311,8 +313,8 @@ extends CountersModel
 	@Override
 	public Object calculateAggregateRow_getAggregatePkColumnDataProvider(CounterSample newSample, String colName, int c, int jdbcType, Object addValue)
 	{
-		if ("pool_id"              .equalsIgnoreCase(colName)) return new Integer(-1);
-		if ("resource_semaphore_id".equalsIgnoreCase(colName)) return new Short( (short) -1 );
+		if ("pool_id"              .equalsIgnoreCase(colName)) return Integer.valueOf(-1);
+		if ("resource_semaphore_id".equalsIgnoreCase(colName)) return Short.valueOf( (short) -1 );
 		
 		return addValue;
 	}
