@@ -29,6 +29,7 @@ import java.io.BufferedInputStream;
 import java.io.BufferedOutputStream;
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
+import java.lang.invoke.MethodHandles;
 import java.sql.Connection;
 import java.sql.ResultSet;
 import java.sql.ResultSetMetaData;
@@ -39,7 +40,6 @@ import java.util.Arrays;
 import java.util.Date;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.Properties;
 import java.util.Vector;
 
 import javax.swing.BorderFactory;
@@ -62,8 +62,8 @@ import javax.swing.table.AbstractTableModel;
 import javax.swing.text.BadLocationException;
 import javax.swing.text.Document;
 
-import org.apache.log4j.Logger;
-import org.apache.log4j.PropertyConfigurator;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.jdesktop.swingx.JXMultiSplitPane;
 import org.jdesktop.swingx.JXTable;
 import org.jdesktop.swingx.MultiSplitLayout;
@@ -87,7 +87,7 @@ public class PerfDemo
 extends JFrame
 implements ActionListener
 {
-	private static Logger _logger = Logger.getLogger(PerfDemo.class);
+	private static final Logger _logger = LogManager.getLogger(MethodHandles.lookup().lookupClass());
 	private static final long serialVersionUID	= 1L;
 
 	private DbxConnection _qProdGenConn   = null;
@@ -1392,7 +1392,7 @@ implements ActionListener
 		}
 		public void addDiscardMsgNum(int msgNum)
 		{
-			Integer msgNumInt = new Integer(msgNum);
+			Integer msgNumInt = Integer.valueOf(msgNum);
 			if ( ! _discardMsgNum.contains(msgNumInt))
 				_discardMsgNum.add(msgNumInt);
 		}
@@ -1431,7 +1431,7 @@ implements ActionListener
 		{
 			// Take care of some specific messages...
 			int           code    = sqle.getErrorCode();
-			Integer       codeInt = new Integer(code);
+			Integer       codeInt = Integer.valueOf(code);
 			String        msgStr  = sqle.getMessage();
 			StringBuilder sb      = new StringBuilder();
 			StringBuilder logMsg  = new StringBuilder();
@@ -1709,13 +1709,8 @@ implements ActionListener
 			e.printStackTrace();
 		}
 
-		Properties log4jProps = new Properties();
-		log4jProps.setProperty("log4j.rootLogger", "INFO, A1");
-//		log4jProps.setProperty("log4j.rootLogger", "TRACE, A1");
-		log4jProps.setProperty("log4j.appender.A1", "org.apache.log4j.ConsoleAppender");
-		log4jProps.setProperty("log4j.appender.A1.layout", "org.apache.log4j.PatternLayout");
-		log4jProps.setProperty("log4j.appender.A1.layout.ConversionPattern", "%d - %-5p - %-30c{1} - %m%n");
-		PropertyConfigurator.configure(log4jProps);
+		// Set Log4j Log Level
+//		Configurator.setRootLevel(Level.TRACE);
 
 //		Configuration conf2 = new Configuration("c:\\projects\\dbxtune\\dbxtune.properties");
 //		Configuration.setInstance(Configuration.CONF, conf2);
