@@ -454,7 +454,7 @@ public class CloseableTabbedPane extends JTabbedPane implements MouseListener,
     public void paintIcon(Component c, Graphics g, int x, int y) {
       boolean doPaintCloseIcon = true;
       try {
-        // JComponent.putClientProperty("isClosable", new Boolean(false));
+        // JComponent.putClientProperty("isClosable", Boolean.valueOf(false));
         JTabbedPane tabbedpane = (JTabbedPane) c;
         int tabNumber = tabbedpane.getUI().tabForCoordinate(tabbedpane, x, y);
         JComponent curPanel = (JComponent) tabbedpane.getComponentAt(tabNumber);
