@@ -36,6 +36,7 @@ import java.io.DataInputStream;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.InputStreamReader;
+import java.lang.invoke.MethodHandles;
 import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -43,7 +44,6 @@ import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Map.Entry;
-import java.util.Properties;
 
 import javax.swing.AbstractAction;
 import javax.swing.BorderFactory;
@@ -78,8 +78,8 @@ import javax.swing.tree.TreeModel;
 import javax.swing.tree.TreeNode;
 import javax.swing.tree.TreePath;
 
-import org.apache.log4j.Logger;
-import org.apache.log4j.PropertyConfigurator;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.fife.ui.rsyntaxtextarea.SyntaxConstants;
 import org.fife.ui.rtextarea.RTextScrollPane;
 import org.jdesktop.swingx.decorator.ColorHighlighter;
@@ -105,7 +105,7 @@ import net.miginfocom.swing.MigLayout;
  */
 public class AseStackTraceAnalyzer
 {
-	private static Logger _logger = Logger.getLogger(AseStackTraceAnalyzer.class);
+	private static final Logger _logger = LogManager.getLogger(MethodHandles.lookup().lookupClass());
 
 	/** Different ways to be used when filtering on function names */
 	public enum FunctionFilterType {EXACT, INDEXOF, REGEXP};
@@ -671,7 +671,7 @@ public class AseStackTraceAnalyzer
 						// Increment the callers stack counter
 						Integer discardCount = _root._functionStackStartDiscardMap.get(stackStartDiscardStr);
 						if (discardCount == null)
-							discardCount = new Integer(0);
+							discardCount = Integer.valueOf(0);
 						discardCount++;
 						_root._functionStackStartDiscardMap.put(stackStartDiscardStr, discardCount);
 					}
@@ -2794,13 +2794,8 @@ public class AseStackTraceAnalyzer
 		if (args.length > 0) 
 			stackfile = args[0];
 
-		Properties log4jProps = new Properties();
-		log4jProps.setProperty("log4j.rootLogger", "INFO, A1");
-		//log4jProps.setProperty("log4j.rootLogger", "DEBUG, A1");
-		log4jProps.setProperty("log4j.appender.A1", "org.apache.log4j.ConsoleAppender");
-		log4jProps.setProperty("log4j.appender.A1.layout", "org.apache.log4j.PatternLayout");
-		log4jProps.setProperty("log4j.appender.A1.layout.ConversionPattern", "%d - %-5p - %-30c{1} - %m%n");
-		PropertyConfigurator.configure(log4jProps);
+		// Set Log4j Log Level
+//		Configurator.setRootLevel(Level.TRACE);
 
 		Configuration conf = new Configuration(System.getProperty("user.home") + File.separator + "aseStackTraceAnalyzer.save.properties");
 		Configuration.setInstance(Configuration.USER_TEMP, conf);
